@@ -431,8 +431,9 @@
 #define MOVE_DEMON_BOOK 427
 #define MOVE_DRILL_PECK 428
 #define MOVE_ME_FIRST 429
+#define MOVE_ANOXIC_FUMES 430
 
-#define LAST_MOVE_INDEX     MOVE_ME_FIRST
+#define LAST_MOVE_INDEX     MOVE_ANOXIC_FUMES
 
 #define MOVES_COUNT LAST_MOVE_INDEX+1
 
