@@ -1724,6 +1724,7 @@ static const u16 sCMedicineEggMoveLearnset[] = {
     MOVE_IMPRISON,
     MOVE_HEX,
     MOVE_CLEAR_SMOG,
+	MOVE_MEMENTO,
     0
 };
 
@@ -1735,6 +1736,7 @@ static const u16 sMedicineEggMoveLearnset[] = {
     MOVE_IMPRISON,
     MOVE_HEX,
     MOVE_CLEAR_SMOG,
+	MOVE_MEMENTO,
     0
 };
 
@@ -1746,6 +1748,7 @@ static const u16 sAMedicineEggMoveLearnset[] = {
     MOVE_IMPRISON,
     MOVE_HEX,
     MOVE_CLEAR_SMOG,
+	MOVE_MEMENTO,
     0
 };
 
@@ -1757,6 +1760,7 @@ static const u16 sSMedicineEggMoveLearnset[] = {
     MOVE_IMPRISON,
     MOVE_HEX,
     MOVE_CLEAR_SMOG,
+	MOVE_MEMENTO,
     0
 };
 
@@ -1768,6 +1772,7 @@ static const u16 sTMedicineEggMoveLearnset[] = {
     MOVE_IMPRISON,
     MOVE_HEX,
     MOVE_CLEAR_SMOG,
+	MOVE_MEMENTO,
     0
 };
 
@@ -3180,6 +3185,7 @@ static const u16 sCNueEggMoveLearnset[] = {
     MOVE_SKILL_SWAP,
     MOVE_RAIN_DANCE,
     MOVE_TELEPORT,
+	MOVE_ANOXIC_FUMES,
     0
 };
 
@@ -3189,6 +3195,7 @@ static const u16 sNueEggMoveLearnset[] = {
     MOVE_SKILL_SWAP,
     MOVE_RAIN_DANCE,
     MOVE_TELEPORT,
+	MOVE_ANOXIC_FUMES,
     0
 };
 
@@ -3198,6 +3205,7 @@ static const u16 sANueEggMoveLearnset[] = {
     MOVE_SKILL_SWAP,
     MOVE_RAIN_DANCE,
     MOVE_TELEPORT,
+	MOVE_ANOXIC_FUMES,
     0
 };
 
@@ -3207,6 +3215,7 @@ static const u16 sTNueEggMoveLearnset[] = {
     MOVE_SKILL_SWAP,
     MOVE_RAIN_DANCE,
     MOVE_TELEPORT,
+	MOVE_ANOXIC_FUMES,
     0
 };
 
@@ -4712,6 +4721,7 @@ static const u16 sCSannyoEggMoveLearnset[] = {
     MOVE_OMINOUS_WIND,
     MOVE_FISSURE,
     MOVE_FLARE_BLITZ,
+	MOVE_LUCKY_CHANT,
     0
 };
 
@@ -4723,6 +4733,7 @@ static const u16 sSannyoEggMoveLearnset[] = {
     MOVE_OMINOUS_WIND,
     MOVE_FISSURE,
     MOVE_FLARE_BLITZ,
+	MOVE_LUCKY_CHANT,
     0
 };
 
