@@ -2073,7 +2073,7 @@ static const u16 sDYukariLevelUpLearnset[] = {
 
 static const u16 sTYukariLevelUpLearnset[] = {
     LEVEL_UP_MOVE(1, MOVE_COUNTER),
-    LEVEL_UP_MOVE(1, MOVE_MIRROR_COAT),
+    LEVEL_UP_MOVE(1, MOVE_POISON_BOMB),
     LEVEL_UP_MOVE(1, MOVE_ZEN_HEADBUTT),
     LEVEL_UP_MOVE(1, MOVE_CHARGE_BEAM),
     LEVEL_UP_MOVE(1, MOVE_PSYSHOT),
@@ -2088,8 +2088,8 @@ static const u16 sTYukariLevelUpLearnset[] = {
     LEVEL_UP_MOVE(32, MOVE_MANASHOCK),
     LEVEL_UP_MOVE(36, MOVE_NIGHT_SHADE),
     LEVEL_UP_MOVE(40, MOVE_MANA_BURST),
-    LEVEL_UP_MOVE(45, MOVE_POISON_BOMB),
-    LEVEL_UP_MOVE(50, MOVE_AGILITY),
+    LEVEL_UP_MOVE(45, MOVE_AGILITY),
+    LEVEL_UP_MOVE(50, MOVE_ANOXIC_FUMES),
     LEVEL_UP_MOVE(55, MOVE_GUNK_SHOT),
     LEVEL_UP_MOVE(60, MOVE_PSYCHO_BOOST),
     LEVEL_UP_END
@@ -3154,7 +3154,7 @@ static const u16 sMedicineLevelUpLearnset[] = {
     LEVEL_UP_MOVE(45, MOVE_TOXIC),
     LEVEL_UP_MOVE(50, MOVE_BURN_POWDER),
     LEVEL_UP_MOVE(55, MOVE_NATURE_SOUND),
-    LEVEL_UP_MOVE(60, MOVE_MEMENTO),
+    LEVEL_UP_MOVE(60, MOVE_ANOXIC_FUMES),
     LEVEL_UP_END
 };
 
@@ -3226,7 +3226,7 @@ static const u16 sTMedicineLevelUpLearnset[] = {
     LEVEL_UP_MOVE(45, MOVE_DISABLE),
     LEVEL_UP_MOVE(50, MOVE_NASTY_PLOT),
     LEVEL_UP_MOVE(55, MOVE_NATURE_SOUND),
-    LEVEL_UP_MOVE(60, MOVE_MEMENTO),
+    LEVEL_UP_MOVE(60, MOVE_ANOXIC_FUMES),
     LEVEL_UP_END
 };
 
@@ -8550,7 +8550,7 @@ static const u16 sCSannyoLevelUpLearnset[] = {
 
 static const u16 sSannyoLevelUpLearnset[] = {
     LEVEL_UP_MOVE(1, MOVE_MIST),
-    LEVEL_UP_MOVE(1, MOVE_LUCKY_CHANT),
+    LEVEL_UP_MOVE(1, MOVE_HYPNOSIS),
     LEVEL_UP_MOVE(1, MOVE_GALE_DANCE),
     LEVEL_UP_MOVE(1, MOVE_AROMATHERAPY),
     LEVEL_UP_MOVE(1, MOVE_MESMERISM),
@@ -8565,8 +8565,8 @@ static const u16 sSannyoLevelUpLearnset[] = {
     LEVEL_UP_MOVE(32, MOVE_CLEAR_SMOG),
     LEVEL_UP_MOVE(36, MOVE_HEAT_WAVE),
     LEVEL_UP_MOVE(40, MOVE_ENCORE),
-    LEVEL_UP_MOVE(45, MOVE_HYPNOSIS),
-    LEVEL_UP_MOVE(50, MOVE_LEAF_STORM),
+    LEVEL_UP_MOVE(45, MOVE_LEAF_STORM),
+    LEVEL_UP_MOVE(50, MOVE_ANOXIC_FUMES),
     LEVEL_UP_MOVE(55, MOVE_NASTY_PLOT),
     LEVEL_UP_MOVE(60, MOVE_OVERHEAT),
     LEVEL_UP_END
@@ -8741,7 +8741,7 @@ static const u16 sCMomoyoLevelUpLearnset[] = {
 
 static const u16 sMomoyoLevelUpLearnset[] = {
     LEVEL_UP_MOVE(1, MOVE_KILLING_BITE),
-    LEVEL_UP_MOVE(1, MOVE_HEAT_CLAW),
+    LEVEL_UP_MOVE(1, MOVE_ANOXIC_FUMES),
     LEVEL_UP_MOVE(1, MOVE_AGILITY),
     LEVEL_UP_MOVE(1, MOVE_TICKLE),
     LEVEL_UP_MOVE(1, MOVE_POISON_STING),
@@ -10809,10 +10809,6 @@ static const u16 sXSendaiLevelUpLearnset[] = {
     LEVEL_UP_MOVE(80, MOVE_JUDGMENT),
     LEVEL_UP_MOVE(90, MOVE_CLOSE_COMBAT),
     LEVEL_UP_MOVE(100, MOVE_EXTERMINATE),
-    LEVEL_UP_END
-};
-
-static const u16 sSekiHeadLevelUpLearnset[] = {
     LEVEL_UP_END
 };
 
